syntax ="proto3";
//package protos;
import "google/protobuf/timestamp.proto";
//option experimental_allow_proto3_optional=true;
import "error.proto";
message Article {

 int32 id=1;
 string imgurl=2;
 string content=3;
 string title=4;
 int32 userId=5;
 optional google.protobuf.Timestamp created_at = 6;
 optional google.protobuf.Timestamp updated_at = 7;
 
}

message CreateReq {
  int32 userId=1;
  Article article=2;
}

message CreateRes{
 Article article=1;
}

message GetAllReq {
 optional int32 authorId=1;
}

message GetAllRes {
 repeated Article articles=1;
 optional Error error=2;
}

service ArticleService {
  rpc create(CreateReq) returns(
  CreateRes);
  rpc all(GetAllReq) returns (GetAllRes);
}
